[gd_scene load_steps=4 format=3 uid="uid://cbt3vb3hjr5tq"]

[ext_resource type="Script" path="res://ui.gd" id="1_wiybj"]
[ext_resource type="Texture2D" uid="uid://25sggcc2mbkh" path="res://sprites/gameover.png" id="2_f32rr"]
[ext_resource type="FontFile" uid="uid://blk7wtsw2eyqr" path="res://Flappy Bird/FlappyBirdRegular.ttf" id="4_xqbft"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wiybj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_xqbft")
theme_override_font_sizes/font_size = 100
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
texture = ExtResource("2_f32rr")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -23.5
offset_right = 58.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_xqbft")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/Button" to="." method="_on_button_pressed"]
